--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -1,6 +1,28 @@
-.navbar {
+
+    
+.navbar-mobile {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
+}
+
+.navbar-desktop {
+    display: none;
+    height: 40px;
+    flex-direction: row;
+    align-items: center;
+}
+
+.navbar-desktop__logo-container {
+    width: 300px;
+    }
+
+@media only screen and (min-width: 768px) {
+    .navbar-mobile {
+        display: none;
+    }
+
+    .navbar-desktop {
+        display: flex;
+    }
 }
