--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,22 +1,28 @@
 .navbar-mobile {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .navbar-desktop {
   display: none;
   height: 40px;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+}
 
 .navbar-desktop__logo-container {
-  width: 300px; }
+  width: 300px;
+}
 
 @media only screen and (min-width: 768px) {
   .navbar-mobile {
-    display: none; }
+    display: none;
+  }
 
   .navbar-desktop {
-    display: flex; } }
+    display: flex;
+  }
+}
 
 /*# sourceMappingURL=NavBar.css.map */
