--- a/src/css/main.css
+++ b/src/css/main.css
@@ -194,11 +194,42 @@ body, p {
   }
 }
 .footer {
+  position: fixed;
+  bottom: 0;
   display: grid;
+  width: 100%;
+  background-color: gray;
+  padding: 16px;
+  color: white;
+}
+
+.footer-logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer__payment-logo-container {
   width: 100px;
+}
+
+.footer-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-info__desktop {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-info__mobile {
+    display: none;
+  }
+
+  .footer-info__desktop {
+    display: block;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
