--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     display: grid;
     width: 100%;
-    background-color: $color-gray;
+    background-color: $color-footer;
     padding: 16px;
     color: $color-white;
 }
