--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,48 +1,58 @@
 .footer {
-  position: fixed;
-  bottom: 0;
   display: grid;
   place-items: center;
   width: 100%;
   background-color: #232121;
   padding: 16px;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+}
 
 .footer__content {
   display: grid;
-  max-width: 1440px; }
+  max-width: 1440px;
+}
 
 .footer-logos {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .footer__payment-logo-container {
-  width: 100px; }
+  width: 80px;
+}
 
 .footer-info {
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .footer-info__desktop {
-  display: none; }
+  display: none;
+}
 
 @media only screen and (min-width: 768px) {
   .footer__content {
-    grid-template-columns: 4fr 1fr; }
+    grid-template-columns: 4fr 1fr;
+  }
 
   .footer-info__mobile {
-    display: none; }
+    display: none;
+  }
 
   .footer-info__desktop {
-    display: block; }
+    display: block;
+  }
 
   .footer-info {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2; }
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
 
   .footer-logos {
-    grid-column: 2 / 3; } }
+    grid-column: 2/3;
+  }
+}
 
 /*# sourceMappingURL=Footer.css.map */
