--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -4,15 +4,19 @@
     align-items: center;
 }
 
+.navbar-mobile__logo-container {
+    height: 45px;
+}
+
 .navbar-desktop {
     display: none;
-    height: 40px;
+    // height: 40px;
     flex-direction: row;
     align-items: center;
 }
 
 .navbar-desktop__logo-container {
-    width: 300px;
+    height: 45px;
 }
 
 @media only screen and (min-width: 768px) {
