--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,13 +5,15 @@
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -o-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* Fix the bug that causes body go out of screen border and because of that horizontal scrolling. */
 /* https://stackoverflow.com/a/42798283/5184474 */
 html,
 body {
-  position: relative; }
+  position: relative;
+}
 
 /* http://meyerweb.com/eric/tools/css/reset/
     v2.0 | 20110126
@@ -103,7 +105,8 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /* HTML5 display-role reset for older browsers */
 article,
@@ -117,108 +120,147 @@ hgroup,
 menu,
 nav,
 section {
-  display: block; }
+  display: block;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 ol,
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote,
 q {
-  quotes: none; }
+  quotes: none;
+}
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none; }
+  content: "";
+  content: none;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 body, p {
-  margin: 0; }
+  margin: 0;
+}
 
 .img-fluid {
   width: 100%;
-  height: auto; }
+  height: auto;
+}
 
 .pointer {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .navbar-mobile {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
+
+.navbar-mobile__logo-container {
+  height: 45px;
+}
 
 .navbar-desktop {
   display: none;
-  height: 40px;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+}
 
 .navbar-desktop__logo-container {
-  width: 300px; }
+  height: 45px;
+}
 
 @media only screen and (min-width: 768px) {
   .navbar-mobile {
-    display: none; }
+    display: none;
+  }
 
   .navbar-desktop {
-    display: flex; } }
+    display: flex;
+  }
+}
+.content {
+  width: 100%;
+}
+
+.background {
+  background-image: url("../images/bg.jpg");
+  height: 547px;
+  width: 100%;
+}
+
 .footer {
-  position: fixed;
-  bottom: 0;
   display: grid;
   place-items: center;
   width: 100%;
   background-color: #232121;
   padding: 16px;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+}
 
 .footer__content {
   display: grid;
-  max-width: 1440px; }
+  max-width: 1440px;
+}
 
 .footer-logos {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .footer__payment-logo-container {
-  width: 100px; }
+  width: 80px;
+}
 
 .footer-info {
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .footer-info__desktop {
-  display: none; }
+  display: none;
+}
 
 @media only screen and (min-width: 768px) {
   .footer__content {
-    grid-template-columns: 4fr 1fr; }
+    grid-template-columns: 4fr 1fr;
+  }
 
   .footer-info__mobile {
-    display: none; }
+    display: none;
+  }
 
   .footer-info__desktop {
-    display: block; }
+    display: block;
+  }
 
   .footer-info {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2; }
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
 
   .footer-logos {
-    grid-column: 2 / 3; } }
+    grid-column: 2/3;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
