--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,3 +1,9 @@
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .navbar-mobile {
   display: flex;
   flex-direction: column;
@@ -8,10 +14,15 @@
   height: 45px;
 }
 
+.navbar-mobile__menu {
+  display: none;
+}
+
 .navbar-desktop {
   display: none;
   flex-direction: row;
   align-items: center;
+  max-width: 1280px;
 }
 
 .navbar-desktop__logo-container {
