--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,5 +1,6 @@
 body, p {
   margin: 0;
+  font-family: Lato;
 }
 
 .img-fluid {
@@ -9,6 +10,10 @@ body, p {
 
 .pointer {
   cursor: pointer;
+}
+
+.rounded {
+  border-radius: 6px;
 }
 
 /*# sourceMappingURL=components.css.map */
