--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -29,6 +29,23 @@
   height: 45px;
 }
 
+.call-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #DF2C21;
+  padding: 8px 16px;
+}
+
+.call-btn__phone-img {
+  height: 24px;
+}
+
+.call-btn__text {
+  font-size: 22px;
+  color: #FFFFFF;
+}
+
 @media only screen and (min-width: 768px) {
   .navbar-mobile {
     display: none;
