--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -23,6 +23,8 @@
   flex-direction: row;
   align-items: center;
   max-width: 1280px;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 
 .navbar-desktop__logo-container {
@@ -35,6 +37,7 @@
   align-items: center;
   background-color: #DF2C21;
   padding: 8px 16px;
+  margin-left: 74px;
 }
 
 .call-btn__phone-img {
@@ -44,6 +47,17 @@
 .call-btn__text {
   font-size: 22px;
   color: #FFFFFF;
+}
+
+.navbar__navbar-links {
+  display: flex;
+  margin-left: 174px;
+}
+
+.navbar-links__navbar-link {
+  color: #1F1D1D;
+  text-decoration: underline;
+  padding-right: 40px;
 }
 
 @media only screen and (min-width: 768px) {
