--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,10 +1,21 @@
+:root {
+  --color-description: #9E9E9E;
+  --color-button: #1F1D1D;
+  --color-base: #000080;
+  --color-red: #DF2C21;
+  --color-white: #FFFFFF;
+  --color-green: #4DDC40;
+  --color-footer: #232121;
+  --font-22: 22px;
+}
+
 .footer {
   display: grid;
   place-items: center;
   width: 100%;
-  background-color: #232121;
+  background-color: var(--color-footer);
   padding: 16px;
-  color: #FFFFFF;
+  color: var(--color-white);
 }
 
 .footer__content {
