--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -8,9 +8,9 @@
     display: grid;
     place-items: center;
     width: 100%;
-    background-color: $color-footer;
+    background-color: var(--color-footer);
     padding: 16px;
-    color: $color-white;
+    color: var(--color-white);
 }
 
 .footer__content {
