--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,3 +1,14 @@
+:root {
+  --color-description: #9E9E9E;
+  --color-button: #1F1D1D;
+  --color-base: #000080;
+  --color-red: #DF2C21;
+  --color-white: #FFFFFF;
+  --color-green: #4DDC40;
+  --color-footer: #232121;
+  --font-22: 22px;
+}
+
 .navbar {
   width: 100%;
   display: flex;
@@ -35,7 +46,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #DF2C21;
+  background-color: var(--color-red);
   padding: 8px 16px;
   margin-left: 74px;
 }
@@ -45,17 +56,19 @@
 }
 
 .call-btn__text {
-  font-size: 22px;
-  color: #FFFFFF;
+  font-size: var(--font-22);
+  font-weight: bold;
+  color: var(--color-white);
+  margin-left: 10px;
 }
 
 .navbar__navbar-links {
   display: flex;
-  margin-left: 174px;
 }
 
 .navbar-links__navbar-link {
-  color: #1F1D1D;
+  font-size: var(--font-22);
+  color: var(--color-button);
   text-decoration: underline;
   padding-right: 40px;
 }
