--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,6 +172,28 @@ body, p {
   border-radius: 6px;
 }
 
+:root {
+  --color-description: #9E9E9E;
+  --color-button: #1F1D1D;
+  --color-base: #000080;
+  --color-red: #DF2C21;
+  --color-white: #FFFFFF;
+  --color-green: #4DDC40;
+  --color-footer: #232121;
+  --font-22: 22px;
+}
+
+:root {
+  --color-description: #9E9E9E;
+  --color-button: #1F1D1D;
+  --color-base: #000080;
+  --color-red: #DF2C21;
+  --color-white: #FFFFFF;
+  --color-green: #4DDC40;
+  --color-footer: #232121;
+  --font-22: 22px;
+}
+
 .navbar {
   width: 100%;
   display: flex;
@@ -209,7 +231,7 @@ body, p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #DF2C21;
+  background-color: var(--color-red);
   padding: 8px 16px;
   margin-left: 74px;
 }
@@ -219,17 +241,19 @@ body, p {
 }
 
 .call-btn__text {
-  font-size: 22px;
-  color: #FFFFFF;
+  font-size: var(--font-22);
+  font-weight: bold;
+  color: var(--color-white);
+  margin-left: 10px;
 }
 
 .navbar__navbar-links {
   display: flex;
-  margin-left: 174px;
 }
 
 .navbar-links__navbar-link {
-  color: #1F1D1D;
+  font-size: var(--font-22);
+  color: var(--color-button);
   text-decoration: underline;
   padding-right: 40px;
 }
@@ -253,13 +277,24 @@ body, p {
   width: 100%;
 }
 
+:root {
+  --color-description: #9E9E9E;
+  --color-button: #1F1D1D;
+  --color-base: #000080;
+  --color-red: #DF2C21;
+  --color-white: #FFFFFF;
+  --color-green: #4DDC40;
+  --color-footer: #232121;
+  --font-22: 22px;
+}
+
 .footer {
   display: grid;
   place-items: center;
   width: 100%;
-  background-color: #232121;
+  background-color: var(--color-footer);
   padding: 16px;
-  color: #FFFFFF;
+  color: var(--color-white);
 }
 
 .footer__content {
