--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -1,11 +1,16 @@
-// Colors
-$color-description: #9E9E9E;
-$color-button: #1F1D1D;
-$color-base: #000080;
-$color-red: #DF2C21;
-$color-white: #FFFFFF;
-$color-green: #4DDC40;
-$color-footer: #232121;
 
-// Font sizes
-$font-22: 22px;
+:root {
+    // Colors
+    --color-description: #9E9E9E;
+    --color-button: #1F1D1D;
+    --color-base: #000080;
+    --color-red: #DF2C21;
+    --color-white: #FFFFFF;
+    --color-green: #4DDC40;
+    --color-footer: #232121;
+    // Font sizes
+    --font-22: 22px;
+
+}
+
+
