--- a/src/css/Content.css
+++ b/src/css/Content.css
@@ -6,6 +6,20 @@
   background-image: url("../images/bg.jpg");
   height: 547px;
   width: 100%;
+  position: relative;
+  display: grid;
+  justify-items: center;
+}
+
+.content__floating-wrapper {
+  position: absolute;
+  bottom: -50px;
+  display: flex;
+}
+
+.content__car-photo-wrapper {
+  width: 500px;
+  margin-left: 50px;
 }
 
 /*# sourceMappingURL=Content.css.map */
