--- a/src/css/Content.scss
+++ b/src/css/Content.scss
@@ -7,4 +7,24 @@
     background-image: url('../images/bg.jpg');
     height: 547px;
     width: 100%;
+    position: relative;
+    display: grid;
+    justify-items: center;
+    // gap: 30px;
+    // align-items: center;
+}
+
+.content__floating-wrapper {
+    position: absolute;
+    bottom: -50px;
+    display: flex;
+    // margin-left: auto;
+    // margin-right: auto;
+    // left: 0;
+    // right: 0;
+}
+
+.content__car-photo-wrapper {
+    width: 500px;
+    margin-left: 50px;
 }
