--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -6,7 +6,18 @@
   --color-white: #FFFFFF;
   --color-green: #4DDC40;
   --color-footer: #232121;
+  --color-input-border: #D1D1D1;
+  --color-input-background: #F6F6F6;
   --font-22: 22px;
+  --font-26: 26px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-45 {
+  margin-bottom: 45px;
 }
 
 .navbar {
@@ -48,7 +59,7 @@
   align-items: center;
   background-color: var(--color-red);
   padding: 8px 16px;
-  margin-left: 74px;
+  margin-left: 16px;
 }
 
 .call-btn__phone-img {
@@ -64,6 +75,7 @@
 
 .navbar__navbar-links {
   display: flex;
+  margin-left: 16px;
 }
 
 .navbar-links__navbar-link {
