--- a/src/css/main.css
+++ b/src/css/main.css
@@ -180,7 +180,18 @@ body, p {
   --color-white: #FFFFFF;
   --color-green: #4DDC40;
   --color-footer: #232121;
+  --color-input-border: #D1D1D1;
+  --color-input-background: #F6F6F6;
   --font-22: 22px;
+  --font-26: 26px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-45 {
+  margin-bottom: 45px;
 }
 
 :root {
@@ -191,7 +202,18 @@ body, p {
   --color-white: #FFFFFF;
   --color-green: #4DDC40;
   --color-footer: #232121;
+  --color-input-border: #D1D1D1;
+  --color-input-background: #F6F6F6;
   --font-22: 22px;
+  --font-26: 26px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-45 {
+  margin-bottom: 45px;
 }
 
 .navbar {
@@ -233,7 +255,7 @@ body, p {
   align-items: center;
   background-color: var(--color-red);
   padding: 8px 16px;
-  margin-left: 74px;
+  margin-left: 16px;
 }
 
 .call-btn__phone-img {
@@ -249,6 +271,7 @@ body, p {
 
 .navbar__navbar-links {
   display: flex;
+  margin-left: 16px;
 }
 
 .navbar-links__navbar-link {
@@ -275,6 +298,48 @@ body, p {
   background-image: url("../images/bg.jpg");
   height: 547px;
   width: 100%;
+  position: relative;
+  display: grid;
+  justify-items: center;
+}
+
+.content__floating-wrapper {
+  position: absolute;
+  bottom: -50px;
+  display: flex;
+}
+
+.content__car-photo-wrapper {
+  width: 500px;
+  margin-left: 50px;
+}
+
+.reservation-form {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  background-color: var(--color-white);
+}
+
+.reservation-form__input {
+  width: 425px;
+  padding: 16px 26px;
+  border: 1px solid var(--color-input-border);
+  font-size: var(--font-22);
+  background-color: var(--color-input-background);
+}
+
+.reservation-form__submit-btn {
+  display: flex;
+  justify-content: center;
+  width: 425px;
+  padding: 16px 26px;
+  background-color: var(--color-red);
+}
+
+.reservation-form__submit-text {
+  color: var(--color-white);
+  font-size: var(--font-26);
 }
 
 :root {
@@ -285,7 +350,18 @@ body, p {
   --color-white: #FFFFFF;
   --color-green: #4DDC40;
   --color-footer: #232121;
+  --color-input-border: #D1D1D1;
+  --color-input-background: #F6F6F6;
   --font-22: 22px;
+  --font-26: 26px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-45 {
+  margin-bottom: 45px;
 }
 
 .footer {
