--- a/src/css/placeholders.css
+++ b/src/css/placeholders.css
@@ -6,7 +6,18 @@
   --color-white: #FFFFFF;
   --color-green: #4DDC40;
   --color-footer: #232121;
+  --color-input-border: #D1D1D1;
+  --color-input-background: #F6F6F6;
   --font-22: 22px;
+  --font-26: 26px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-45 {
+  margin-bottom: 45px;
 }
 
 /*# sourceMappingURL=placeholders.css.map */
