Start working on content for Home page.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -194,6 +194,36 @@ body, p {
   margin-bottom: 45px;
 }
 
+.home {
+  width: 100%;
+}
+
+.top {
+  background-image: url("../images/bg.jpg");
+  height: 547px;
+  width: 100%;
+  position: relative;
+  display: grid;
+  justify-items: center;
+}
+
+.top__floating-wrapper {
+  position: absolute;
+  bottom: -50px;
+  display: flex;
+}
+
+.top__car-photo-wrapper {
+  width: 500px;
+  margin-left: 50px;
+}
+
+.home__content {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
@@ -290,30 +320,6 @@ body, p {
     display: flex;
   }
 }
-.home {
-  width: 100%;
-}
-
-.top {
-  background-image: url("../images/bg.jpg");
-  height: 547px;
-  width: 100%;
-  position: relative;
-  display: grid;
-  justify-items: center;
-}
-
-.top__floating-wrapper {
-  position: absolute;
-  bottom: -50px;
-  display: flex;
-}
-
-.top__car-photo-wrapper {
-  width: 500px;
-  margin-left: 50px;
-}
-
 .reservation-form {
   display: flex;
   flex-direction: column;
