--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
 @import 'reset';
 @import 'components';
 @import 'placeholders';
+@import 'Home';
 @import 'NavBar';
-@import 'Content';
 @import 'ReservationForm';
 @import 'Footer';
