--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -11,6 +11,7 @@
     --color-input-border: #D1D1D1;
     --color-input-background: #F6F6F6;
     // Font sizes
+    --font-16: 16px;
     --font-22: 22px;
     --font-26: 26px;
 }
