--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -12,20 +12,30 @@
 }
 
 .top__floating-wrapper {
-  position: absolute;
-  bottom: -50px;
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1280px;
 }
 
 .top__car-photo-wrapper {
   width: 500px;
-  margin-left: 50px;
 }
 
 .home__content {
   height: 100vh;
   display: grid;
   place-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .top__floating-wrapper {
+    position: absolute;
+    bottom: -50px;
+    display: row;
+    justify-content: space-between;
+    width: 80%;
+  }
 }
 
 /*# sourceMappingURL=Home.css.map */
