--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -15,9 +15,10 @@
 }
 
 .top__floating-wrapper {
-    position: absolute;
-    bottom: -50px;
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1280px;
     // margin-left: auto;
     // margin-right: auto;
     // left: 0;
@@ -26,11 +27,21 @@
 
 .top__car-photo-wrapper {
     width: 500px;
-    margin-left: 50px;
+    // margin-left: 50px;
 }
 
 .home__content {
     height: 100vh;
     display: grid;
     place-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .top__floating-wrapper {
+        position: absolute;
+        bottom: -50px;
+        display: row;
+        justify-content: space-between;
+        width: 80%;
+    }
 }
