--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -60,18 +60,25 @@
 }
 
 .navbar-links__navbar-link {
-    font-size: var(--font-22);
+    font-size: var(--font-16);
     color: var(--color-button);
     text-decoration: underline;
-    padding-right: 40px;
+    padding-right: 16px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
     .navbar-mobile {
         display: none;
     }
 
     .navbar-desktop {
         display: flex;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .navbar-links__navbar-link {
+        font-size: var(--font-22);
+        padding-right: 40px;
     }
 }
