--- a/src/css/placeholders.css
+++ b/src/css/placeholders.css
@@ -8,6 +8,7 @@
   --color-footer: #232121;
   --color-input-border: #D1D1D1;
   --color-input-background: #F6F6F6;
+  --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
 }
