--- a/src/css/ReservationForm.scss
+++ b/src/css/ReservationForm.scss
@@ -1,6 +1,7 @@
 .reservation-form {
     display: flex;
     flex-direction: column;
+    width: 100%;
     // position: absolute;
     // left: 320px;
     // top: 300px;
@@ -9,7 +10,7 @@
 }
 
 .reservation-form__input {
-    width: 425px;
+    width: 100%;
     padding: 16px 26px;
     border: 1px solid var(--color-input-border);
     font-size: var(--font-22);
@@ -19,7 +20,7 @@
 .reservation-form__submit-btn {
     display: flex;
     justify-content: center;
-    width: 425px;
+    width: 100%;
     padding: 16px 26px;
     background-color: var(--color-red);
 }
@@ -31,6 +32,7 @@
 
 @media only screen and (min-width: 768px) {
     .reservation-form {
+        width: 425px;
         padding: 40px;
     }
 }
