--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -1,5 +1,9 @@
 .home {
+    position: relative;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .top {
@@ -7,9 +11,8 @@
     background-image: url('../images/bg.jpg');
     height: 547px;
     width: 100%;
-    position: relative;
-    display: grid;
-    justify-items: center;
+    // display: grid;
+    // justify-items: center;
     // gap: 30px;
     // align-items: center;
 }
@@ -27,7 +30,8 @@
 }
 
 .top__car-photo-wrapper {
-    width: 500px;
+    display: none;
+    // width: 500px;
     // margin-left: 50px;
 }
 
@@ -40,9 +44,15 @@
 @media only screen and (min-width: 1024px) {
     .top__floating-wrapper {
         position: absolute;
-        bottom: -50px;
+        top: 300px;
         flex-direction: row;
         justify-content: space-between;
         width: 80%;
+    }
+
+    .top__car-photo-wrapper {
+        display: block;
+        width: 500px;
+        // margin-left: 50px;
     }
 }
