--- a/src/css/main.css
+++ b/src/css/main.css
@@ -196,16 +196,17 @@ body, p {
 }
 
 .home {
+  position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .top {
   background-image: url("../images/bg.jpg");
   height: 547px;
   width: 100%;
-  position: relative;
-  display: grid;
-  justify-items: center;
 }
 
 .top__floating-wrapper {
@@ -217,7 +218,7 @@ body, p {
 }
 
 .top__car-photo-wrapper {
-  width: 500px;
+  display: none;
 }
 
 .home__content {
@@ -229,10 +230,15 @@ body, p {
 @media only screen and (min-width: 1024px) {
   .top__floating-wrapper {
     position: absolute;
-    bottom: -50px;
+    top: 300px;
     flex-direction: row;
     justify-content: space-between;
     width: 80%;
+  }
+
+  .top__car-photo-wrapper {
+    display: block;
+    width: 500px;
   }
 }
 :root {
@@ -357,16 +363,25 @@ body, p {
 .reservation-form__submit-btn {
   display: flex;
   justify-content: center;
-  width: 100%;
-  padding: 16px 26px;
+  align-items: center;
+  padding: 16px;
   background-color: var(--color-red);
 }
 
 .reservation-form__submit-text {
   color: var(--color-white);
-  font-size: var(--font-26);
+  font-size: 1.2em;
 }
 
+@media only screen and (min-width: 400px) {
+  .reservation-form__submit-btn {
+    padding: 16px 26px;
+  }
+
+  .reservation-form__submit-text {
+    font-size: 1.35em;
+  }
+}
 @media only screen and (min-width: 768px) {
   .reservation-form {
     width: 425px;
