--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -35,8 +35,8 @@
     // margin-left: 50px;
 }
 
-.home__content {
-    height: 100vh;
+.home__home-content {
+    width: 100%;
     display: grid;
     place-items: center;
 }
@@ -54,5 +54,10 @@
         display: block;
         width: 500px;
         // margin-left: 50px;
+    }
+
+    .home__home-content {
+        width: 80%;
+        padding-top: 80px;
     }
 }
