--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -8,9 +8,10 @@
 
 .navbar-mobile {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    // width: 100%;
+    width: 100%;
+    padding: 16px;
 }
 
 .navbar-mobile__logo-container {
