--- a/src/css/main.css
+++ b/src/css/main.css
@@ -221,8 +221,8 @@ body, p {
   display: none;
 }
 
-.home__content {
-  height: 100vh;
+.home__home-content {
+  width: 100%;
   display: grid;
   place-items: center;
 }
@@ -239,6 +239,11 @@ body, p {
   .top__car-photo-wrapper {
     display: block;
     width: 500px;
+  }
+
+  .home__home-content {
+    width: 80%;
+    padding-top: 80px;
   }
 }
 :root {
@@ -272,8 +277,10 @@ body, p {
 
 .navbar-mobile {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  padding: 16px;
 }
 
 .navbar-mobile__logo-container {
