--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -65,6 +65,10 @@
   margin-left: 16px;
 }
 
+.call-btn--mobile {
+  display: none;
+}
+
 .call-btn__phone-img {
   height: 24px;
 }
@@ -88,6 +92,11 @@
   padding-right: 16px;
 }
 
+@media only screen and (min-width: 768px) {
+  .call-btn--mobile {
+    display: block;
+  }
+}
 @media only screen and (min-width: 1024px) {
   .navbar-mobile {
     display: none;
