--- a/src/css/main.css
+++ b/src/css/main.css
@@ -204,9 +204,14 @@ body, p {
 }
 
 .top {
-  background-image: url("../images/bg.jpg");
-  height: 547px;
+  height: 265px;
   width: 100%;
+  background-image: url("../images/bg-mobile.png");
+  background-position: center;
+  /* Center the image */
+  background-repeat: no-repeat;
+  /* Do not repeat the image */
+  background-size: cover;
 }
 
 .top__floating-wrapper {
@@ -227,6 +232,12 @@ body, p {
   place-items: center;
 }
 
+@media only screen and (min-width: 768px) {
+  .top {
+    height: 547px;
+    background-image: url("../images/bg.jpg");
+  }
+}
 @media only screen and (min-width: 1024px) {
   .top__floating-wrapper {
     position: absolute;
