--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -31,8 +31,18 @@
 
 .home__home-content {
   width: 100%;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.home-content__welcome-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.welcome-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (min-width: 768px) {
@@ -58,6 +68,10 @@
   .home__home-content {
     width: 80%;
     padding-top: 80px;
+  }
+
+  .welcome-wrapper {
+    flex-direction: row;
   }
 }
 
