--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -40,8 +40,18 @@
 
 .home__home-content {
     width: 100%;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-content__welcome-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.welcome-wrapper {
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (min-width: 768px) {
@@ -69,5 +79,9 @@
     .home__home-content {
         width: 80%;
         padding-top: 80px;
+    }
+
+    .welcome-wrapper {
+        flex-direction: row;
     }
 }
