Work on Home page content.

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -45,6 +45,11 @@
   flex-direction: column;
 }
 
+.home-content__mission-container {
+  display: flex;
+  flex-direction: column;
+}
+
 @media only screen and (min-width: 768px) {
   .top {
     height: 547px;
@@ -71,6 +76,10 @@
   }
 
   .welcome-wrapper {
+    flex-direction: row;
+  }
+
+  .home-content__mission-container {
     flex-direction: row;
   }
 }
