--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -54,6 +54,11 @@
     flex-direction: column;
 }
 
+.home-content__mission-container {
+    display: flex;
+    flex-direction: column;
+}
+
 @media only screen and (min-width: 768px) {
     .top {
         height: 547px;
@@ -82,6 +87,10 @@
     }
 
     .welcome-wrapper {
+        flex-direction: row;
+    }
+
+    .home-content__mission-container {
         flex-direction: row;
     }
 }
