--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -10,16 +10,13 @@
   --color-input-background: #F6F6F6;
   --font-16: 16px;
   --font-22: 22px;
-  --font-26: 26px;
-}
+  --font-26: 26px; }
 
 .mb-16 {
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; }
 
 .mb-45 {
-  margin-bottom: 45px;
-}
+  margin-bottom: 45px; }
 
 .footer {
   display: grid;
@@ -27,55 +24,43 @@
   width: 100%;
   background-color: var(--color-footer);
   padding: 16px;
-  color: var(--color-white);
-}
+  color: var(--color-white); }
 
 .footer__content {
   display: grid;
-  max-width: 1440px;
-}
+  max-width: 1440px; }
 
 .footer-logos {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 .footer__payment-logo-container {
-  width: 80px;
-}
+  width: 80px; }
 
 .footer-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .footer-info__desktop {
-  display: none;
-}
+  display: none; }
 
 @media only screen and (min-width: 768px) {
   .footer__content {
-    grid-template-columns: 4fr 1fr;
-  }
+    grid-template-columns: 4fr 1fr; }
 
   .footer-info__mobile {
-    display: none;
-  }
+    display: none; }
 
   .footer-info__desktop {
-    display: block;
-  }
+    display: block; }
 
   .footer-info {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
+    grid-column: 1 / 2;
+    grid-row: 1 / 2; }
 
   .footer-logos {
-    grid-column: 2/3;
-  }
-}
+    grid-column: 2 / 3; } }
 
 /*# sourceMappingURL=Footer.css.map */
